# Backend

./: .dockerignore  .env  .gitignore  Dockerfile  Makefile  alembic.ini  main.py  pyproject.toml  pytest.ini  ruff.toml
.github/workflows/: deploy-backend.yml
alembic/: env.py
alembic/versions/: 1abd983d415f_remove_old_verification_column.py  249787a3c334_add_skills_to_experience.py  28be5d8e70db_.py  2e08455573b3_.py  35e1f687a507_added_fields_in_candidate.py  40e20833a8bd_llm_model_to_user_table.py  49a850cca923_.py  4f7abdb5e52e_vacancy.py  52061d86df06_cascade.py  582de5ea198b_initial_migration.py  6bbeec17a3c5_verification_table.py  6fbcc53648c7_.py  765e858f7301_recruter_profile_pic.py  775bf7017229_a_lot_of_changes.py  93d89ef7a44e_initial_migration.py  958bac5e3839_change_workexperience_start_and_end_.py  a58a129377dc_init.py  a61694152470_vacancy_fix.py  b4b8e6e17880_.py  d9f59e415115_add_initial_llm_models.py  ef36260e4694_change_vector_size.py  f6d624bf1aeb_.py  f6dad7b06b47_initial_migration.py  faa92431663d_change_education_date_to_string.py  fbce86670080_candiate_status.py
auth/: Oth2.py  token.py
db/: models.py  session.py
helpers/: cv.py
router/: attachments.py  audio.py  auth.py  candidates.py  chat.py  cv.py  llm_models.py  recruiter.py  vacancies.py
schema/: attachments.py  audio.py  auth.py  candidates.py  chat.py  cv.py  llm_models.py  pagination.py  recruiter.py  vacancies.py
tasks/: candidates.py
tests/: conftest.py
tests/auth/: test_token.py
tests/router/: test_recruiter.py  test_vacancy.py
util/: app_config.py  config.py  s3.py
